auth and version
